--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <!-- <link rel="stylesheet" href="styles.css">  -->
+        <link rel="stylesheet" href="styles.css"> 
         <meta charset="UTF-8"/>
-        <title>Название проекта</title>
+        <title>Название учебного проекта</title>
     </head>
         <body>
-            <h1>Главный заголовок</h1>
-            <p title="Подсказка">Параграф текста</p>
-            <a href = "#">Ссылка</a>
+            <div class="text1">
+            <h1 class="text1_h1 h1">Главный заголовок</h1>
+            <p title="Подсказка" class="text1_p p">Параграф текста</p>
+            <a href = "#" class="text1_href">Ссылка</a>
+            <button type="button" class="text1_button">Подписаться</button>
             <!-- <img src="./images/Хасбик.jpg" alt="Картинка"  style="width: 300px"/> -->
+            </div>
 
             <div class="article">
-                <h1>Основы HTML</h1>
-                <p>
+                <h1 class="article_h1 h1">Основы HTML</h1>
+                <p class="article_p p">
                   HTML - это <span style="color: green">язык разметки</span>
                   документов во Всемирной паутине
                 </p>
