site with pop up

--- a/src/html/event.html
+++ b/src/html/event.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
   @@include('blocks/head.html')
 
@@ -27,4 +27,4 @@
             
             @@include('blocks/page-footer.html')
         </body>
-</html> -->
+</html>
