last version website

--- a/src/html/event.html
+++ b/src/html/event.html
@@ -6,6 +6,7 @@
           @@include('blocks/page-header.html')
 
             <main class="main">
+              @@include('blocks/default.html')
                 <article class="event">
                     
                     <form class="reserve event__reserve">
