--- a/src/html/events.html
+++ b/src/html/events.html
@@ -72,6 +72,12 @@
                         <a href="#" class="listing__link link">Смотреть все</a>
                     </section>
                 </div>
+
+                <div class="listing events__table">
+                    <h2 class="section-title">Дополнительные услуги</h2>
+
+                    @@include('blocks/table.html')
+                </div>
             </main>
 
             @@include('blocks/page-footer.html')
