created all pages with adaptive without js

--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -22,7 +22,12 @@
             </picture>
             <div class="about__block2-content">
                 <p class="about__block2-text">Мы уже успешно организовали и провели более 100 проектов. Посмотрите, как это было классно.</p>
-                <a href="#" class="about__block2-text">Смотреть</a>
+                <a href="#" class="about__block2-link">
+                    Смотреть
+                    <svg class="arrow__icon" width="92" height="63">
+                        <use xlink:href="assets/icons/symbols.svg#arrow"></use>
+                    </svg>
+                </a>
             </div>
         </div>
     </div>
