--- a/src/html/blocks/head.html
+++ b/src/html/blocks/head.html
@@ -1,4 +1,5 @@
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- подключение шрифта с Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
