--- a/src/html/blocks/contacts.html
+++ b/src/html/blocks/contacts.html
@@ -38,8 +38,6 @@
                 </div>
             </div>
         </div>
-        <div class="contacts__map">
-            <img src="assets/images/map.png.jpeg"/>
-        </div>
+        <div class="contacts__map" id="js-contactsMap"></div>
     </div>
 </div>
