--- a/src/html/blocks/offers.html
+++ b/src/html/blocks/offers.html
@@ -3,7 +3,7 @@
         Я хочу:
     </p>
     <div class="offers__btns">
-        <button type="button" class="offers__btn btn btn--red">Провести мероприятие</button>
+        <button type="button" class="offers__btn btn btn--red" id="js-eventOpenBtn">Провести мероприятие</button>
         <button type="button" class="offers__btn btn">Стать арендатором</button>
     </div>
 </div>
